--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "morgan": "^1.10.0",
+    "pg": "^8.2.1",
     "tmi.js": "^1.5.0"
   },
   "devDependencies": {
