--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "mongoose": "^5.9.15",
     "morgan": "^1.10.0",
-    "pg": "^8.2.1",
     "tmi.js": "^1.5.0"
   },
   "devDependencies": {
