--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.15",
+    "mongoose-int32": "^0.3.1",
     "morgan": "^1.10.0",
     "tmi.js": "^1.5.0"
   },
