updated .env.example for backend

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=development
-PORT=1313
-DB_URL=<some mongodb url>
+NODE_ENV=<development | production>
+PORT=<backend port>
+DB_URL=<mongodb url>
 CHANNEL=<channel name>
 REF_BOT=<referee bot name>
